--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,33 @@ body {
   align-items: center;
   gap: 5.6rem;
 }
+.nav__dropdown__list {
+  list-style: none;
+  top: 3rem;
+  left: -9rem;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  padding: 3rem 3rem;
+  background-color: white;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.13);
+  border-radius: 10px;
+}
+.nav__dropdown__list--2 {
+  left: 0;
+  padding: 3rem 2rem;
+  width: 12rem;
+}
+.nav__dropdown__list-item {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+.nav__dropdown__list-item img {
+  width: 1.6rem;
+  height: 1.6rem;
+}
 .nav__list {
   display: flex;
   gap: 3rem;
@@ -42,16 +69,22 @@ body {
   text-decoration: none;
   color: inherit;
 }
+.nav__link:hover {
+  cursor: pointer;
+  color: var(--almostblack);
+  font-weight: 500;
+}
 .nav__item {
   display: flex;
   align-items: center;
   gap: 0.5rem;
   font-size: 1.6rem;
 }
-.nav__item:hover {
-  cursor: pointer;
-  color: var(--almostblack);
-  font-weight: 500;
+.nav__item--1 {
+  position: relative;
+}
+.nav__item--2 {
+  position: relative;
 }
 .nav__login {
   display: flex;
@@ -93,7 +126,7 @@ body {
   margin: 0 auto;
   display: flex;
   gap: 15rem;
-  height: 80vh;
+  height: 75vh;
 }
 
 .hero__info {
