--- a/main.scss
+++ b/main.scss
@@ -32,6 +32,37 @@ body {
     display: flex;
     align-items: center;
     gap: 5.6rem;
+
+    &__list {
+      list-style: none;
+      top: 3rem;
+      left: -9rem;
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+      padding: 3rem 3rem;
+      background-color: white;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.13);
+      border-radius: 10px;
+
+      &--2 {
+        left: 0;
+        padding: 3rem 2rem;
+        width: 12rem;
+      }
+
+      &-item {
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+
+        img {
+          width: 1.6rem;
+          height: 1.6rem;
+        }
+      }
+    }
   }
 
   &__list {
@@ -43,6 +74,11 @@ body {
   &__link {
     text-decoration: none;
     color: inherit;
+    &:hover {
+      cursor: pointer;
+      color: var(--almostblack);
+      font-weight: 500;
+    }
   }
 
   &__item {
@@ -50,11 +86,11 @@ body {
     align-items: center;
     gap: 0.5rem;
     font-size: 1.6rem;
-
-    &:hover {
-      cursor: pointer;
-      color: var(--almostblack);
-      font-weight: 500;
+    &--1 {
+      position: relative;
+    }
+    &--2 {
+      position: relative;
     }
   }
 
@@ -103,7 +139,7 @@ body {
   margin: 0 auto;
   display: flex;
   gap: 15rem;
-  height: 80vh;
+  height: 75vh;
 }
 
 .hero {
