--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,7 @@ body {
 }
 .hero__btn {
   margin-right: auto;
+  display: inline-block;
   height: 5rem;
   width: 15rem;
   background-color: var(--almostblack);
@@ -173,4 +174,72 @@ body {
 
 .hidden {
   display: none;
+}
+
+@media only screen and (max-width: 50em) {
+  html {
+    font-size: 55%;
+  }
+  .nav {
+    padding: 2.4rem 2rem;
+  }
+  .container {
+    gap: 5rem;
+    flex-direction: column;
+    text-align: center;
+    height: 100vh;
+  }
+  .hero__btn {
+    margin: 0 auto;
+    text-align: center;
+  }
+  .hero__info {
+    order: 1;
+    text-align: center;
+    gap: 2rem;
+  }
+  .hero__description {
+    width: 100%;
+  }
+  .hero__img {
+    order: 0;
+    flex-basis: 0;
+  }
+  .hero__img img {
+    width: 100%;
+    height: 70rem;
+  }
+  .primary-heading {
+    font-size: 7rem;
+    margin-top: 1rem;
+  }
+  .nav__desktop {
+    display: none;
+  }
+  .section-hero {
+    padding: 0;
+  }
+}
+@media only screen and (max-width: 40em) {
+  html {
+    font-size: 50%;
+  }
+  .hero__img img {
+    height: auto;
+  }
+  .primary-heading {
+    font-size: 4rem;
+  }
+  .hero__featured {
+    margin-top: 2rem;
+  }
+}
+@media only screen and (max-width: 30em) {
+  .primary-heading {
+    font-size: 3.5rem;
+    font-weight: 800;
+  }
+  .hero__featured img {
+    width: 8rem;
+  }
 }
