--- a/main.scss
+++ b/main.scss
@@ -278,3 +278,136 @@ body {
     }
   }
 }
+
+.nav__mobile {
+  position: relative;
+
+  &-btn {
+    border: none;
+    background-color: inherit;
+    z-index: 99;
+  }
+
+  &__menu-Open {
+  }
+  &__menu-Close {
+    display: none;
+  }
+
+  &__expand {
+    z-index: 1;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    right: 0;
+    top: 0;
+    width: 70%;
+    height: 100vh;
+    background-color: var(--almostwhite);
+    padding: 3rem;
+  }
+
+  &__list {
+    margin-top: 7rem;
+    list-style: none;
+    font-size: 3rem;
+    color: var(--mediumgray);
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+  }
+
+  &__item {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
+  &__link {
+    text-decoration: none;
+    color: inherit;
+    font-weight: 400;
+  }
+
+  &__login {
+    margin-top: 4rem;
+    display: flex;
+    flex-direction: column;
+  }
+  &__btn {
+    background-color: var(--almostwhite);
+    border-radius: 15px;
+    height: 7rem;
+    font-size: 3rem;
+    color: inherit;
+  }
+}
+//   <ul class="nav__mobile__list">
+//     <li class="nav__mobile__item nav__item--1" data-dropdown="features">
+//       <a href="#" class="nav__mobile__link">Features</a>
+//       <img
+//         src="images/icon-arrow-down.svg"
+//         alt="Arrow Down"
+//         class="arrow-features"
+//         data-arrow="features"
+//       />
+
+//       <ul
+//         class="nav__mobile__dropdown__list nav__dropdown__list--1 hidden"
+//         data-dropdown-list="features"
+//       >
+//         <li class="nav__mobile__dropdown__list-item">
+//           <img src="images/icon-todo.svg" alt="Todo" />
+//           <a href="#" class="nav__mobile__link">To do List</a>
+//         </li>
+//         <li class="nav__mobile__dropdown__list-item">
+//           <img src="images/icon-calendar.svg" alt="Callendar" />
+//           <a href="#" class="nav__mobile__link">Callendar</a>
+//         </li>
+//         <li class="nav__mobile__dropdown__list-item">
+//           <img src="images/icon-reminders.svg" alt="Reminders" />
+//           <a href="#" class="nav__mobile__link">Reminders</a>
+//         </li>
+//         <li class="nav__mobile__dropdown__list-item">
+//           <img src="images/icon-planning.svg" alt="planning" />
+//           <a href="#" class="nav__mobile__link">Planning</a>
+//         </li>
+//       </ul>
+//     </li>
+
+//     <li class="nav__mobile__item nav__item--2" data-dropdown="company">
+//       <a href="#" class="nav__mobile__link">Company</a>
+//       <img
+//         src="images/icon-arrow-down.svg"
+//         alt="Arrow down"
+//         class="arrow-company"
+//         data-arrow="company"
+//       />
+
+//       <ul
+//         class="nav__mobile__dropdown__list nav__dropdown__list--2 hidden"
+//         data-dropdown-list="company"
+//       >
+//         <li class="nav__mobile__dropdown__list-item">
+//           <a href="#" class="nav__mobile__link">History</a>
+//         </li>
+//         <li class="nav__mobile__dropdown__list-item">
+//           <a href="#" class="nav__mobile__link">Our Team</a>
+//         </li>
+//         <li class="nav__mobile__dropdown__list-item">
+//           <a href="#" class="nav__mobile__link">Blog</a>
+//         </li>
+//       </ul>
+//     </li>
+
+//     <li class="nav__mobile__item"><a href="#" class="nav__mobile__link">Careers</a></li>
+//     <li class="nav__mobile__item"><a href="#" class="nav__mobile__link">About</a></li>
+//   </ul>
+// </div>
+// </nav>
+.black {
+  top: 0;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.623);
+}
