--- a/main.scss
+++ b/main.scss
@@ -160,7 +160,7 @@ body {
   &__btn {
     margin-right: auto;
     display: inline-block;
-    height: 5rem;
+
     width: 15rem;
     background-color: var(--almostblack);
     color: var(--almostwhite);
@@ -168,6 +168,7 @@ body {
     border: 1px solid var(--almostblack);
     border-radius: 10px;
     cursor: pointer;
+    padding: 1rem;
 
     &:hover {
       background-color: var(--almostwhite);
@@ -192,9 +193,10 @@ body {
     }
   }
 }
-
-.hidden {
-  display: none;
+@media only screen and (min-width: 50em) {
+  .nav__mobile {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 50em) {
@@ -288,12 +290,6 @@ body {
     z-index: 99;
   }
 
-  &__menu-Open {
-  }
-  &__menu-Close {
-    display: none;
-  }
-
   &__expand {
     z-index: 1;
     position: absolute;
@@ -302,7 +298,7 @@ body {
     right: 0;
     top: 0;
     width: 70%;
-    height: 100vh;
+    height: 150vh;
     background-color: var(--almostwhite);
     padding: 3rem;
   }
@@ -319,8 +315,9 @@ body {
 
   &__item {
     display: flex;
-    align-items: center;
-    gap: 1rem;
+    flex-direction: column;
+    align-items: start;
+    gap: 2rem;
   }
   &__link {
     text-decoration: none;
@@ -340,74 +337,35 @@ body {
     font-size: 3rem;
     color: inherit;
   }
+
+  &__dropdown__list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    padding-left: 4rem;
+    width: 100%;
+    padding-top: 2rem;
+    font-size: 2.4rem;
+    &-item {
+      display: flex;
+      align-items: center;
+      gap: 2rem;
+      img {
+        height: 2.4rem;
+        width: 2.4rem;
+      }
+    }
+  }
 }
-//   <ul class="nav__mobile__list">
-//     <li class="nav__mobile__item nav__item--1" data-dropdown="features">
-//       <a href="#" class="nav__mobile__link">Features</a>
-//       <img
-//         src="images/icon-arrow-down.svg"
-//         alt="Arrow Down"
-//         class="arrow-features"
-//         data-arrow="features"
-//       />
+.hidden {
+  display: none;
+}
 
-//       <ul
-//         class="nav__mobile__dropdown__list nav__dropdown__list--1 hidden"
-//         data-dropdown-list="features"
-//       >
-//         <li class="nav__mobile__dropdown__list-item">
-//           <img src="images/icon-todo.svg" alt="Todo" />
-//           <a href="#" class="nav__mobile__link">To do List</a>
-//         </li>
-//         <li class="nav__mobile__dropdown__list-item">
-//           <img src="images/icon-calendar.svg" alt="Callendar" />
-//           <a href="#" class="nav__mobile__link">Callendar</a>
-//         </li>
-//         <li class="nav__mobile__dropdown__list-item">
-//           <img src="images/icon-reminders.svg" alt="Reminders" />
-//           <a href="#" class="nav__mobile__link">Reminders</a>
-//         </li>
-//         <li class="nav__mobile__dropdown__list-item">
-//           <img src="images/icon-planning.svg" alt="planning" />
-//           <a href="#" class="nav__mobile__link">Planning</a>
-//         </li>
-//       </ul>
-//     </li>
-
-//     <li class="nav__mobile__item nav__item--2" data-dropdown="company">
-//       <a href="#" class="nav__mobile__link">Company</a>
-//       <img
-//         src="images/icon-arrow-down.svg"
-//         alt="Arrow down"
-//         class="arrow-company"
-//         data-arrow="company"
-//       />
-
-//       <ul
-//         class="nav__mobile__dropdown__list nav__dropdown__list--2 hidden"
-//         data-dropdown-list="company"
-//       >
-//         <li class="nav__mobile__dropdown__list-item">
-//           <a href="#" class="nav__mobile__link">History</a>
-//         </li>
-//         <li class="nav__mobile__dropdown__list-item">
-//           <a href="#" class="nav__mobile__link">Our Team</a>
-//         </li>
-//         <li class="nav__mobile__dropdown__list-item">
-//           <a href="#" class="nav__mobile__link">Blog</a>
-//         </li>
-//       </ul>
-//     </li>
-
-//     <li class="nav__mobile__item"><a href="#" class="nav__mobile__link">Careers</a></li>
-//     <li class="nav__mobile__item"><a href="#" class="nav__mobile__link">About</a></li>
-//   </ul>
-// </div>
-// </nav>
 .black {
   top: 0;
   position: absolute;
-  height: 100%;
+  height: 150vh;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.623);
+  background-color: rgba(0, 0, 0, 0.726);
 }
